--- a/views/log.handlebars
+++ b/views/log.handlebars
@@ -62,13 +62,14 @@
 		<hr style="height:4px;border:none;color:#333;background-color:#333;" />
 
 		<p class="subheader">Entry for {{readDate}}</p>
-      <div class="form-group">
-            	<h3 class="title">{{title}}</h3>
-			</div>
-			<div class="form-group form-group-lg">
-        <p>{{desc}}</p>
-				<!--<input type="text" class="form-control" id="description" name="log" value="{{desc}}">-->
-			</div>
+		<h4>Challenge: {{challenge}}</h4>
+    <div class="form-group">
+          	<h3 class="title">{{title}}</h3>
+		</div>
+		<div class="form-group form-group-lg">
+      <p>{{desc}}</p>
+			<!--<input type="text" class="form-control" id="description" name="log" value="{{desc}}">-->
+		</div>
 
 
 		<a href="/entry/{{date}}">
