--- a/views/challenge.handlebars
+++ b/views/challenge.handlebars
@@ -34,7 +34,7 @@
 			text-align: center;
 			vertical-align: center;
         }
-        
+
 	</style>
 	<!-- this is a comment in HTML -->
 
@@ -50,9 +50,9 @@
 	<div class="container">
 		<!-- h1 through h6 are headers. The higher the number, the smaller the header -->
 		<!-- p means paragraph -->
-        
-        
-     
+
+
+
         <div><a href="/index"><button class="homebtn">MAIN MENU</button></a></div>
 		<div align="center">
 			<h1 class="titlePage">Challenge </h1>
@@ -68,19 +68,19 @@
             <table class="main" border="0" cellpadding="15" margin="10">
                 <tr class="challengeBorder">
                     <td>
-                        
+
                         <div>
                               <p id="chal" class="theChallenge">{{challenge}}</p>
                          </div>
                     </td>
                 </tr>
             </table>
-           
+
         <div align="center">
         <button onClick="set()" class ="smallbtn">Get New Challenge</button>
-        </div>     
-       
-        
+        </div>
+
+
          {{else}}
             <hr style="height:4px;border:none;color:#333;background-color:#333;" />
 
@@ -98,19 +98,20 @@
 
         {{/if}}
         <table class="main" border="0">
-                <tr>
-                    <td>
-                    <a href="/complete">
-                         <button class="mediumbtn">Challenge Completed</button>
-                        </a>
-                    </td>
-                </tr>
-            </table>
+            <tr>
+                <td>
+									<form action="/complete" method="post" id="challengeDone">
+										<input type="hidden" name="challenge" id="challengeInput" value="">
+									</form>
+                  <button type="submit" form="challengeDone" value="Completed" class="mediumbtn">Challenge Completed</button>
+                </td>
+            </tr>
+        </table>
 
 
 	</div>
 
-    
+
 	<script src="https://code.jquery.com/jquery.js"></script>
 	<script src="/js/bootstrap.min.js"></script>
 	<script src="/js/randomChallenge.js"></script>
