--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -19,19 +19,26 @@
     
 .login { 
 	position: absolute;
-	top: 40%;
+	top: 60%;
 	left: 50%;
 	margin: -150px 0 0 -150px;
-	width:300px;
-	height:300px;
-    font-size:35px
+	width:280px;
+	height:250px;
+    font-size:35px;
     
 }
 
-.login h1 { 
+    
+    
+.title { 
 	color: #3cb0fd; 
-	/*text-shadow: -1px 0px 5px rgba(0, 0, 0, 1); */
-	letter-spacing:1px; text-align:center; 
+	letter-spacing:1px; 
+    text-align:center;
+    position: absolute;
+	top: 45%;
+	left: 50%;
+	margin: -150px 0 0 -150px;
+    font-size:60px;
 }
 
 input { 
@@ -64,9 +71,8 @@ input:focus { box-shadow: inset 0 -5px 45px rgba(100,100,100,0.4), 0 1px 1px rgb
 </head>
 
 <body class="thebackground">
+     <h1 class="title">SmallTalk</h1>
   <div class="login">
-	<h1>SMALL TALK</h1>
-
     <form action = "index">
     	<input type="text" name="u" placeholder="Username" required="required" />
         <input type="password" name="p" placeholder="Password" required="required" />
