--- a/views/challenge.handlebars
+++ b/views/challenge.handlebars
@@ -71,7 +71,7 @@ valueOf()+(h?'&utmxhash='+escape(h.substr(1)):'')+
 
         <div><a href="/index"><button class="homebtn">MAIN MENU</button></a></div>
 		<div align="center">
-			<h1 class="titlePage">Challenge </h1>
+			<h1 class="titlePage">SmallTalk</h1>
 		</div>
 
         {{#if alt}}
