--- a/views/guide.handlebars
+++ b/views/guide.handlebars
@@ -37,7 +37,7 @@
 		<!-- p means paragraph -->
 		 <div><a href="/index"><button class="homebtn">MAIN MENU</button></a></div>
 		<div class="text-center">
-			<h1>GUIDE</h1>
+			<h1 class="titlePage">GUIDE</h1>
 		</div>
 
 
