--- a/views/history.handlebars
+++ b/views/history.handlebars
@@ -24,12 +24,15 @@
 	<div class="container">
 		<!-- h1 through h6 are headers. The higher the number, the smaller the header -->
 		<!-- p means paragraph -->
-         <div><a href="/index"><button class="homebtn">MAIN MENU</button></a></div>
-		<div class="text-center">
-			<h1 class="titlePage">History </h1>
+         
+		<div>
+            <a href="/index"><button class="homebtn">MAIN MENU</button></a>
+			<h1 class="titlePage">History</h1>
 		</div>
-		
         <hr style="height:4px;border:none;color:#333;background-color:#333;" />
+        <div class="text-center">
+			  
+		</div>
         
 		<!-- divs are invisible structuring elements that stack vertically by default. Use them to organize your code -->
 		<!-- img tags are images. Lorem Pixel will deliver random images; handy! -->
