--- a/views/help.handlebars
+++ b/views/help.handlebars
@@ -20,7 +20,6 @@
     <style>   
         .subtitle{
             font-size:25px;
-            text-align: center;
         }
         
         
@@ -35,7 +34,7 @@
          <div><a href="/index"><button class="homebtn">MAIN MENU</button></a></div>
         
 		<div class="text-center">
-			<h1>HELP</h1>
+			<h1 class="titlePage">HELP</h1>
 		</div>
 
 		<hr style="height:4px;border:none;color:#333;background-color:#333;" />
