--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -30,12 +30,13 @@
 </head>
 
 <body class="backgroundColor">
+   
 	<div class="container">
 		<!-- h1 through h6 are headers. The higher the number, the smaller the header -->
 		<!-- p means paragraph -->
 		<div align="center">
-			<h1 class="titlePage">
-				Small Talk
+			<h1 class="indexTitlePage">
+				SmallTalk
 			</h1>
 		</div>
 
@@ -56,12 +57,8 @@
             <a href="guide">
                     <button class="mediumbtn">GENERAL TIPS</button>
 				</a>
-        </div>
-        
-        
-            
-            
-	</div>
+        </div>     
+    </div>
      <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
