--- a/views/guide.handlebars
+++ b/views/guide.handlebars
@@ -27,6 +27,11 @@
         	font-size: 20px;
         }
         
+         h1{
+        display:inline;
+        padding-left:20%
+        }
+        
         
     </style>
 </head>
@@ -35,9 +40,11 @@
 	<div class="container">
 		<!-- h1 through h6 are headers. The higher the number, the smaller the header -->
 		<!-- p means paragraph -->
-		 <div><a href="/index"><button class="homebtn">MAIN MENU</button></a></div>
-		<div class="text-center">
+		 
+		<div >
+            <a href="/index"><button class="homebtn">MAIN MENU</button></a>
 			<h1 class="titlePage">GUIDE</h1>
+            
 		</div>
 
 
