--- a/views/help.handlebars
+++ b/views/help.handlebars
@@ -22,6 +22,10 @@
             font-size:25px;
         }
         
+        h1{
+        display:inline;
+        padding-left:20%
+        }
         
     </style>
     
@@ -31,9 +35,10 @@
 	<div class="container">
 		<!-- h1 through h6 are headers. The higher the number, the smaller the header -->
 		<!-- p means paragraph -->
-         <div><a href="/index"><button class="homebtn">MAIN MENU</button></a></div>
+         
         
-		<div class="text-center">
+		<div >
+            <a href="/index"><button class="homebtn">MAIN MENU</button></a>
 			<h1 class="titlePage">HELP</h1>
 		</div>
 
