--- a/views/history.handlebars
+++ b/views/history.handlebars
@@ -9,7 +9,12 @@
 	<link href="/css/bootstrap-theme.min.css" rel="stylesheet">
     <link href="/css/smallTalk.css" rel="stylesheet">
     
-
+    <style>
+    h1{
+        display:inline;
+        padding-left:20%
+    }
+    </style>
 	<!-- this is a comment in HTML -->
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
@@ -25,6 +30,7 @@
 		<!-- h1 through h6 are headers. The higher the number, the smaller the header -->
 		<!-- p means paragraph -->
          
+     
 		<div>
             <a href="/index"><button class="homebtn">MAIN MENU</button></a>
 			<h1 class="titlePage">History</h1>
