--- a/views/log.handlebars
+++ b/views/log.handlebars
@@ -40,6 +40,10 @@
 
 		}
 
+          h1{
+        display:inline;
+        padding-left:20%
+        }
     </style>
 	<!-- this is a comment in HTML -->
 
@@ -55,9 +59,9 @@
 	<div class="container">
 		<!-- h1 through h6 are headers. The higher the number, the smaller the header -->
 		<!-- p means paragraph -->
-		 <div><a href="/index"><button class="homebtn">MAIN MENU</button></a></div>
+		 <div><a href="/index"><button class="homebtn">MAIN MENU</button></a>
 			<h1 class="titlePage">JOURNAL ENTRY </h1>
-
+        </div>
 
 		<hr style="height:4px;border:none;color:#333;background-color:#333;" />
 
