--- a/views/entry.handlebars
+++ b/views/entry.handlebars
@@ -15,8 +15,13 @@ textarea{
 	resize: none;
 }
 
+        
+    h1{
+        display:inline;
+        padding-left:20%
+    }
 	</style>
-
+    
 
 	<!-- this is a comment in HTML -->
 
@@ -32,8 +37,8 @@ textarea{
 	<div class="container">
 		<!-- h1 through h6 are headers. The higher the number, the smaller the header -->
 		<!-- p means paragraph -->
-		  <div><a href="/index"><button class="homebtn">MAIN MENU</button></a></div>
 		<div>
+            <a href="/index"><button class="homebtn">MAIN MENU</button></a>
 			<h1 class="titlePage">{{header}}</h1>
 		</div>
         <hr style="height:4px;border:none;color:#333;background-color:#333;" />
