--- a/views/challenge.handlebars
+++ b/views/challenge.handlebars
@@ -68,9 +68,8 @@ valueOf()+(h?'&utmxhash='+escape(h.substr(1)):'')+
 	<div class="container">
 		<!-- h1 through h6 are headers. The higher the number, the smaller the header -->
 		<!-- p means paragraph -->
-
-		<div>
-            <a href="/index"><button class="homebtn">MAIN MENU</button></a>
+        <a href="/index"><button class="homebtn">MAIN MENU</button></a>
+		<div align="center">
 			<h1 class="titlePage">Challenge</h1>
 		</div>
 
@@ -78,7 +77,7 @@ valueOf()+(h?'&utmxhash='+escape(h.substr(1)):'')+
               <hr style="height:4px;border:none;color:#333;background-color:#333;" />
 
             <div align-text="center">
-              <h2 class="subHeader">Your Challenge of the Day</h2>
+              <h2 class="subHeader">Your </h2>
             </div>
 
             <table class="main" border="0" cellpadding="15" margin="10">
@@ -98,6 +97,7 @@ valueOf()+(h?'&utmxhash='+escape(h.substr(1)):'')+
 
 
          {{else}}
+        <div align="center">
             <hr style="height:4px;border:none;color:#333;background-color:#333;" />
 
             <div>
@@ -113,7 +113,7 @@ valueOf()+(h?'&utmxhash='+escape(h.substr(1)):'')+
             </table>
 
         {{/if}}
-        <div align="center">
+        
         <table class="main" border="0">
             <tr>
                 <td>
