--- a/public/css/smallTalk.css
+++ b/public/css/smallTalk.css
@@ -102,10 +102,10 @@
   border-radius: 8px;
   text-shadow: -1px 0px 8px rgba(0, 0, 0, 1);
   color: #ffffff;
-  width: 50%;
-  height: 250%;
+  width: 190px;
+  height: 80px;
    text-align: center;
-  font-size:150 %;
+  font-size:120%;
   padding: 10px 40px 10px 40px;
 }
 
