--- a/views/challenge.handlebars
+++ b/views/challenge.handlebars
@@ -76,7 +76,7 @@ valueOf()+(h?'&utmxhash='+escape(h.substr(1)):'')+
         {{#if alt}}
               <hr style="height:4px;border:none;color:#333;background-color:#333;" />
 
-            <div align-text="center">
+            <div align="center">
               <h2 class="subHeader">Your Challenge Of The Day</h2>
             </div>
 
@@ -92,7 +92,7 @@ valueOf()+(h?'&utmxhash='+escape(h.substr(1)):'')+
             </table>
 
         <div align="center">
-        <button onClick="set()" class ="smallbtn">Get New Challenge</button>
+        <button onClick="set()" class="smallbtn">Get New Challenge</button>
         </div>
 
 
